--- a/src/app/modules/boards/pages/board/board.component.html
+++ b/src/app/modules/boards/pages/board/board.component.html
@@ -30,7 +30,16 @@
           </div>
         </div>
       </div>
-      <app-btn color="light" class="shrink-0" (click)="addColumn()">Add Column</app-btn>
+      <div class="shrink-0">
+        <app-btn *ngIf="!showListForm" color="light" (click)="showListForm = !showListForm">Add another list</app-btn>
+        <div class="w-full" *ngIf="showListForm">
+          <textarea [formControl]="inputList" class="w-full"></textarea>
+          <div class="flex space-x-2 justify-between">
+            <app-btn color="success" (click)="addList()">Create</app-btn>
+            <app-btn color="light" (click)="showListForm = !showListForm">Close</app-btn>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
