--- a/src/app/modules/auth/components/register-form/register-form.component.html
+++ b/src/app/modules/auth/components/register-form/register-form.component.html
@@ -13,6 +13,7 @@
           placeholder="Enter email"
           type="email"
           name="email"
+          autocomplete="off"
           class="w-full rounded bg-gray-100 border-gray-300 border-2"
         />
       </div>
